--- a/vuurwerkschade/index.html
+++ b/vuurwerkschade/index.html
@@ -22,6 +22,7 @@ Orin Habich 10689508-->
     <svg id = "svgPiechartSEHomstander" width="150" height="150"></svg>
     <svg id = "svgPiechartSEHstatusVuurwerk" width="150" height="150"></svg>
     <svg id = "svgBarchartOverlast" width="600" height="300"></svg>
+    <svg id = "svgBarchartSchade" width="600" height="300"></svg>
 
   </body>
 </html>
