issues: tooltip, selection jaarwisseling, opmaak

--- a/vuurwerkschade/index.html
+++ b/vuurwerkschade/index.html
@@ -16,13 +16,33 @@ Orin Habich 10689508-->
   <body>
     <h2>Schade door vuurwerk </br> Jaarwisseling 20xx/20yy</h2>
     <h4>By Orin Habich 10689508</h4>
-    <svg id = "svgBarchartSEH" width="600" height="300"></svg>
-    <svg id = "svgPiechartSEHperTypeVuurwerk" width="150" height="150"></svg>
-    <svg id = "svgPiechartSEHperLeeftijd" width="150" height="150"></svg>
-    <svg id = "svgPiechartSEHomstander" width="150" height="150"></svg>
-    <svg id = "svgPiechartSEHstatusVuurwerk" width="150" height="150"></svg>
-    <svg id = "svgBarchartOverlast" width="600" height="300"></svg>
-    <svg id = "svgBarchartSchade" width="600" height="300"></svg>
-
+    <div class="container-fluid">
+      <div class="row">
+        <h4>Mens</h4>
+        <div class="col-sm-6" >
+          <svg id = "svgBarchartSEH" width="600" height="300"></svg>
+        </div>
+        <div class="col-sm-6" >
+          <svg id = "svgPiechartSEHperTypeVuurwerk" width="150" height="150"></svg>
+          <svg id = "svgPiechartSEHperLeeftijd" width="150" height="150"></svg>
+          <svg id = "svgPiechartSEHomstander" width="150" height="150"></svg>
+          <svg id = "svgPiechartSEHstatusVuurwerk" width="150" height="150"></svg>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6" >
+          <svg id = "svgBarchartOverlast" width="600" height="300"></svg>
+        </div>
+      </div>
+      <div class="row">
+        <h4>Milieu</h4>
+      </div>
+      <div class="row">
+        <h4>Materiaal</h4>
+        <div class="col-sm-6" >
+          <svg id = "svgBarchartSchade" width="600" height="300"></svg>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
