added image poppetje

--- a/vuurwerkschade/index.html
+++ b/vuurwerkschade/index.html
@@ -14,32 +14,38 @@ Orin Habich 10689508-->
     <script src="vuurwerkschade.js"></script>
   </head>
   <body>
-    <h2>Schade door vuurwerk </br> Jaarwisseling 20xx/20yy</h2>
-    <h4>By Orin Habich 10689508</h4>
+    <h2><b>Schade door vuurwerk </br> Jaarwisseling 20xx/20yy</b></h2>
+    <h5>By Orin Habich 10689508</h5>
     <div class="container-fluid">
       <div class="row">
-        <h4>Mens</h4>
-        <div class="col-sm-6" >
+        <h3><b>Mens</b></h3>
+        <div class="col-md-6" >
           <svg id = "svgBarchartSEH" width="600" height="300"></svg>
         </div>
-        <div class="col-sm-6" >
+        <div class="col-md-3" >
           <svg id = "svgPiechartSEHperTypeVuurwerk" width="150" height="150"></svg>
           <svg id = "svgPiechartSEHperLeeftijd" width="150" height="150"></svg>
           <svg id = "svgPiechartSEHomstander" width="150" height="150"></svg>
           <svg id = "svgPiechartSEHstatusVuurwerk" width="150" height="150"></svg>
         </div>
+        <div class="col-md-2" >
+          <svg id = "svgImagePoppetje1" width="150" height="300"></svg>
+        </div>
       </div>
       <div class="row">
-        <div class="col-sm-6" >
+        <div class="col-md-6" >
           <svg id = "svgBarchartOverlast" width="600" height="300"></svg>
         </div>
       </div>
       <div class="row">
-        <h4>Milieu</h4>
+        <h3><b>Milieu</b></h3>
+        <div class="col-md-6" >
+          <svg id = "svgTijdelijkVoorOpmaakPagina" width="600" height="200"></svg>
+        </div>
       </div>
       <div class="row">
-        <h4>Materiaal</h4>
-        <div class="col-sm-6" >
+        <h3><b>Materiaal</b></h3>
+        <div class="col-md-6" >
           <svg id = "svgBarchartSchade" width="600" height="300"></svg>
         </div>
       </div>
