head red on hover with css

--- a/vuurwerkschade/index.html
+++ b/vuurwerkschade/index.html
@@ -29,7 +29,11 @@ Orin Habich 10689508-->
           <svg id = "svgPiechartSEHstatusVuurwerk" width="150" height="150"></svg>
         </div>
         <div class="col-md-2" >
-          <svg id = "svgImagePoppetje1" width="150" height="300"></svg>
+          <div class="container">
+            <img src="images/headBlack.png" alt="headBlack" id = "headBlack" class="image">
+            <img src="images/headRed.png" alt="headRed" id = "headRed" class="image">
+            <img src="images/poppetje1.png" alt="Poppetje1" id = "body" class="image">
+          </div>
         </div>
       </div>
       <div class="row">
