interactivity selections barcharts and dropdown

--- a/vuurwerkschade/index.html
+++ b/vuurwerkschade/index.html
@@ -14,7 +14,14 @@ Orin Habich 10689508-->
     <script src="vuurwerkschade.js"></script>
   </head>
   <body>
-    <h2><b>Schade door vuurwerk </br> Jaarwisseling 20xx/20yy</b></h2>
+    <div class="row">
+      <div class="col-md-6" >
+        <h2><b>Schade door vuurwerk</b></h2>
+      </div>
+      <div class="col-md-6" >
+        <h2 id = "title"><b>Jaarwisseling </b></h2>
+      </div>
+    </div>
     <h5>By Orin Habich 10689508</h5>
     <div class="container-fluid">
       <div class="row">
