--- a/vuurwerkschade/index.html
+++ b/vuurwerkschade/index.html
@@ -92,7 +92,7 @@ Orin Habich 10689508-->
         <h2><b>Milieu</b></h2>
         <div class="col-md-6" >
           <h3>Hier moet een lijngrafiek komen over de piek co2</h3>
-          <svg id = "svgTijdelijkVoorOpmaakPagina" width="600" height="200"></svg>
+          <svg id = "svgLinechart" width="600" height="200"></svg>
         </div>
       </div>
       <div class="row">
