--- a/vuurwerkschade/index.html
+++ b/vuurwerkschade/index.html
@@ -91,8 +91,8 @@ Orin Habich 10689508-->
       <div class="row">
         <h2><b>Milieu</b></h2>
         <div class="col-md-6" >
-          <h3>Hier moet een lijngrafiek komen over de piek co2</h3>
-          <svg id = "svgLinechart" width="600" height="200"></svg>
+          <b><h3 id = "titleLinechart"></h3></b>
+          <svg id = "svgLinechart" width="800" height="400"></svg>
         </div>
       </div>
       <div class="row">
