--- a/vuurwerkschade/index.html
+++ b/vuurwerkschade/index.html
@@ -107,48 +107,55 @@ Orin Habich 10689508-->
         </div>
 
           <div class="col-md-6" >
-            <!-- <svg id = "svgInfoMilieu" width="800" height="400"></svg> -->
-
-            <!-- <div class="container">
-              <img src="images/vuurwerkAchtergrond2.png" alt="vuurwerkAchtergrond" id = "vuurwerkAchtergrond" class="image">
-            </div> -->
-
               <div class="img-holder">
                 <img src="images/vuurwerkAchtergrond2.png" alt="image description"/>
-                <button type="button" class="btn1" data-toggle="collapse" data-target="#info1">!</button>
-                <div id="content1">
-                  3.000.000 kilo afval van vuurwerk! Ongeveer 100.000 kilo barium, 40.000 kilo koper, 30.000 kilo
-                  strontium, 10.000 kilo titaan, en 5.000 kilo antimoon, deze giftige stoffen komen elk jaar tijdens de
-                  jaarwisseling bij het afsteken van consumentenvuurwerk in het milieu terecht: in de lucht, in het
-                  water en in de grond. Bij de explosie in de lucht vindt de grootste uitstoot van milieuvervuilende (en
-                  giftige) stoffen plaats. Vervolgens verspreiden de luchtvervuilende stoffen zich en komen daarna op
-                  de grond terecht.
-                </div>
-                <button type="button" class="btn2" data-toggle="collapse" data-target="#info2">!</button>
-                <div id="content2">
-                  De belangrijkste verontreinigende stoffen die ontstaan zijn (ultra)fijn stof en gassen
-                  als koolmonoxide, kooldioxide, stikstof- en zwaveldioxide, maar ook metaalverbindingen
-                  (kaliumsulfaat en kaliumcarbonaat) en zware metalen die zich aan fijn stofdeeltjes hechten (o.a.
-                  barium, koper, strontium, titaan en antimoon).
-                </div>
-                <button type="button" class="btn3" data-toggle="collapse" data-target="#info3">!</button>
-                <div id="content3">
-                  Van de stoffen die in de lucht terecht komen, valt 90
-                  procent in de directe omgeving weer op de grond. Rond 68 procent hiervan spoelt via de riolering
-                  naar een waterzuiveringsinstallatie of valt rechtstreeks op de oppervlakte van het water. De
-                  resterende 22 procent blijft op de grond liggen.
-              </div>
-              <button type="button" class="btn4" data-toggle="collapse" data-target="#info4">!</button>
-              <div id="content4">
-                De resten van de verpakking gemaakt uit karton,
-                papier, plastic en metaal worden als afval op de grond achtergelaten.
-              </div>
 
+                <div id="textWindow1" class="tooltipInfo">Veel vervuilende stoffen
+                  <span class="content">
+                    3.000.000 kilo afval van vuurwerk! Ongeveer 100.000 kilo barium, 40.000 kilo koper, 30.000 kilo
+                    strontium, 10.000 kilo titaan, en 5.000 kilo antimoon, deze giftige stoffen komen elk jaar tijdens de
+                    jaarwisseling bij het afsteken van consumentenvuurwerk in het milieu terecht.
+                  </span>
+                </div>
+
+                <div id="textWindow2" class="tooltipInfo">Explosie in de lucht
+                  <span class="content">
+                    Bij de explosie in de lucht vindt de grootste uitstoot van milieuvervuilende (en
+                    giftige) stoffen plaats. Vervolgens verspreiden de luchtvervuilende stoffen zich en komen daarna op
+                    de grond terecht.
+                  </span>
+                </div>
+
+                <div id="textWindow3" class="tooltipInfo">Zware metalen
+                  <span class="content">
+                    De belangrijkste verontreinigende stoffen die ontstaan zijn (ultra)fijn stof en gassen
+                    als koolmonoxide, kooldioxide, stikstof- en zwaveldioxide, maar ook metaalverbindingen
+                    (kaliumsulfaat en kaliumcarbonaat) en zware metalen die zich aan fijn stofdeeltjes hechten (o.a.
+                    barium, koper, strontium, titaan en antimoon).
+                  </span>
+                </div>
+
+                <div id="textWindow4" class="tooltipInfo">Directe omgeving
+                  <span class="content">
+                    Van de stoffen die in de lucht terecht komen, valt 90
+                    procent in de directe omgeving weer op de grond. Rond 68 procent hiervan spoelt via de riolering
+                    naar een waterzuiveringsinstallatie of valt rechtstreeks op de oppervlakte van het water. De
+                    resterende 22 procent blijft op de grond liggen.
+                  </span>
+                </div>
+
+                <div id="textWindow5" class="tooltipInfo">Afvalresten
+                  <span class="content">
+                    De resten van de verpakking gemaakt uit karton,
+                    papier, plastic en metaal worden als afval op de grond achtergelaten.
+                  </span>
+                </div>
+              </div>
             <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#sourcesInfoMilieu">Bronnen</button>
             <div id="sourcesInfoMilieu" class="collapse">
               <p>
-                <a href="https://www.luchtmeetnet.nl/">
-                 nog invullen</a><br>
+                <a href="http://www.staakthetvuren.com/Gespreksnotitie%20VITO.pdf">
+                 vuurwerk en milieu.pdf</a><br>
               </p>
             </div>
           </div>
