checkboxes: code lelijk, maar code werkt

--- a/vuurwerkschade/index.html
+++ b/vuurwerkschade/index.html
@@ -50,7 +50,7 @@ Orin Habich 10689508-->
           <svg id = "svgFirstAid" width="600" height="400"></svg>
         </div>
         <div class="col-md-6" >
-          <h3>Lichamelijk letsel</h3>
+          <b><h3 id = "titleInjuriesSection"></h3></b>
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="350px" height="500px" viewBox="-2341.46 -1201.05 817.904 1429.22" preserveAspectRatio="xMidYMid meet"  >
             <rect id="svgEditorBackground" x="0" y="0" width="1620" height="840" style="fill:none; stroke: none;"/>
             <defs id="svgEditorDefs">
@@ -99,25 +99,25 @@ Orin Habich 10689508-->
       <div class="row">
         <b><h3 id = "titlePiechartsSection"></h3></b>
         <div class="col-md-3" >
-        <input type="checkbox" id="myCheck1" > Per leeftijdsklasse<br>
-        <input type="checkbox" id="myCheck2" > Naar soort vuurwerk<br>
-        <input type="checkbox" id="myCheck3" > Zelf afgestoken of omstander<br>
-        <input type="checkbox" id="myCheck4" > Legaal of illegaal vuurwerk
+        <input class = "checkbox" type="checkbox" id="checkbox1" >Per leeftijdsklasse<br>
+        <input class = "checkbox" type="checkbox" id="checkbox2" >Naar soort vuurwerk<br>
+        <input class = "checkbox" type="checkbox" id="checkbox3" >Zelf afgestoken of omstander<br>
+        <input class = "checkbox" type="checkbox" id="checkbox4" >Legaal of illegaal vuurwerk<br>
         </div>
-        <div class="col-md-3" >
-          <h4>Per leeftijdsklasse</h4>
+        <div class="col-md-3"  >
+          <h4 id="titlePerAge"></h4>
           <svg id = "svgPerAge" width="200" height="200"></svg>
         </div>
         <div class="col-md-2" >
-          <h4>Naar soort vuurwerk</h4>
+          <h4 id="titleTypeFireworks"></h4>
             <svg id = "svgPerTypeFireworks" width="150" height="150"></svg>
         </div>
         <div class="col-md-2" >
-          <h4>Zelf afgestoken of omstander</h4>
+          <h4 id="titleBystander"></h4>
           <svg id = "svgPerBystander" width="150" height="150"></svg>
         </div>
         <div class="col-md-2" >
-          <h4>Legaal of illegaal vuurwerk</h4>
+          <h4 id="titleStatusFireworks"></h4>
           <svg id = "svgPerStatusFireworks" width="150" height="150"></svg>
         </div>
       </div>
