start with cleanup style

--- a/vuurwerkschade/index.html
+++ b/vuurwerkschade/index.html
@@ -49,37 +49,37 @@ Orin Habich 10689508-->
           <h3>Vuurwerkslachtoffers naar de spoedeisende hulp</h3>
           <svg id = "svgFirstAid" width="600" height="400"></svg>
         </div>
-        <div class="col-md-6" id="poppetje">
+        <div class="col-md-6" id="figureHuman">
           <b><h3 id = "titleInjuriesSection"></h3></b>
           <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="350px" height="500px" viewBox="-2341.46 -1201.05 817.904 1429.22" preserveAspectRatio="xMidYMid meet"  >
           <rect id="svgEditorBackground" x="0" y="0" width="1620" height="840" style="fill:none; stroke: none;"/>
           <defs id="svgEditorDefs">
           <polygon id="svgEditorShapeDefs" style="fill:khaki;stroke:black;vector-effect:non-scaling-stroke;stroke-width:1px;"/>
           </defs>
-          <circle id="head" class="poppetje" cx="286" cy="149" r="118.891" transform="matrix(1 0 0 1 -2172 -1172)"/>
-          <ellipse id="body" class="poppetje" cx="288" cy="532" rx="122.34" ry="271.548" class="poppetje" transform="matrix(1 0 0 1 -2172 -1172)"/>
+          <circle id="head" class="figureHuman" cx="286" cy="149" r="118.891" transform="matrix(1 0 0 1 -2172 -1172)"/>
+          <ellipse id="body" class="figureHuman" cx="288" cy="532" rx="122.34" ry="271.548" class="figureHuman" transform="matrix(1 0 0 1 -2172 -1172)"/>
           <g id="leg">
-            <ellipse class="poppetje" cx="212" cy="888" rx="40" ry="156" transform="matrix(1.1134 0.0933779 -0.0933779 1.1134 -2112.16 -1291.14)"/>
-            <ellipse class="poppetje" cx="640.18" cy="870.175" rx="40" ry="156" transform="matrix(1.10984 -0.128966 0.128966 1.10984 -2665.36 -1163.7)"/>
-            <ellipse class="poppetje" cx="241.104" cy="929.778" rx="40" ry="156" transform="matrix(1.11692 -0.0294497 0.0294497 1.11692 -2264.54 -1030.28)"/>
-            <ellipse class="poppetje" cx="367.939" cy="936.255" rx="40" ry="156" transform="matrix(1.11692 -0.0294497 0.0294497 1.11692 -2264.54 -1030.28)"/>
-            <ellipse class="poppetje" cx="158" cy="1320" rx="80" ry="40" transform="matrix(1 0 0 1 -2172 -1172)"/>
-            <ellipse class="poppetje" cx="406" cy="1324" rx="80" ry="40" transform="matrix(1 0 0 1 -2172 -1172)"/>
+            <ellipse class="figureHuman" cx="212" cy="888" rx="40" ry="156" transform="matrix(1.1134 0.0933779 -0.0933779 1.1134 -2112.16 -1291.14)"/>
+            <ellipse class="figureHuman" cx="640.18" cy="870.175" rx="40" ry="156" transform="matrix(1.10984 -0.128966 0.128966 1.10984 -2665.36 -1163.7)"/>
+            <ellipse class="figureHuman" cx="241.104" cy="929.778" rx="40" ry="156" transform="matrix(1.11692 -0.0294497 0.0294497 1.11692 -2264.54 -1030.28)"/>
+            <ellipse class="figureHuman" cx="367.939" cy="936.255" rx="40" ry="156" transform="matrix(1.11692 -0.0294497 0.0294497 1.11692 -2264.54 -1030.28)"/>
+            <ellipse class="figureHuman" cx="158" cy="1320" rx="80" ry="40" transform="matrix(1 0 0 1 -2172 -1172)"/>
+            <ellipse class="figureHuman" cx="406" cy="1324" rx="80" ry="40" transform="matrix(1 0 0 1 -2172 -1172)"/>
           </g>
           <g id="arm">
-            <ellipse class="poppetje" cx="426" cy="320" rx="132" ry="40" transform="matrix(0.936021 0.351944 -0.351944 0.936021 -2024.12 -1289.45)"/>
-            <ellipse class="poppetje" cx="-76.982" cy="461.6" rx="132" ry="40" transform="matrix(0.531939 -0.846783 0.846783 0.531939 -2340.56 -1095.21)"/>
-            <ellipse class="poppetje" cx="-121.778" cy="109.829" rx="132" ry="40" transform="matrix(-0.941915 -0.335851 0.335851 -0.941915 -2295.93 -667.118)"/>
-            <ellipse class="poppetje" cx="-1095.66" cy="426.642" rx="132" ry="40" transform="matrix(0.346316 -0.938118 0.938118 0.346316 -1693.38 -1868.39)"/>
+            <ellipse class="figureHuman" cx="426" cy="320" rx="132" ry="40" transform="matrix(0.936021 0.351944 -0.351944 0.936021 -2024.12 -1289.45)"/>
+            <ellipse class="figureHuman" cx="-76.982" cy="461.6" rx="132" ry="40" transform="matrix(0.531939 -0.846783 0.846783 0.531939 -2340.56 -1095.21)"/>
+            <ellipse class="figureHuman" cx="-121.778" cy="109.829" rx="132" ry="40" transform="matrix(-0.941915 -0.335851 0.335851 -0.941915 -2295.93 -667.118)"/>
+            <ellipse class="figureHuman" cx="-1095.66" cy="426.642" rx="132" ry="40" transform="matrix(0.346316 -0.938118 0.938118 0.346316 -1693.38 -1868.39)"/>
           </g>
           <g id="hand">
-            <ellipse class="poppetje" cx="-94" cy="376" rx="42" ry="34" transform="matrix(1 0 0 1 -2172 -1172)"/>
-            <ellipse class="poppetje" cx="448" cy="596" rx="42" ry="34" transform="matrix(1 0 0 1 -2172 -1172)"/>
+            <ellipse class="figureHuman" cx="-94" cy="376" rx="42" ry="34" transform="matrix(1 0 0 1 -2172 -1172)"/>
+            <ellipse class="figureHuman" cx="448" cy="596" rx="42" ry="34" transform="matrix(1 0 0 1 -2172 -1172)"/>
           </g>
 
           <g id="eye">
-            <circle class="poppetje" cx="236" cy="136" r="22" transform="matrix(1 0 0 1 -2172 -1172)"/>
-            <circle class="poppetje" cx="294" cy="137" r="22" transform="matrix(1 0 0 1 -2172 -1172)"/>
+            <circle class="figureHuman" cx="236" cy="136" r="22" transform="matrix(1 0 0 1 -2172 -1172)"/>
+            <circle class="figureHuman" cx="294" cy="137" r="22" transform="matrix(1 0 0 1 -2172 -1172)"/>
           </g>
           <path d="M270.7243885221396,-280.38419723097496l-9.37299999999999,9.372000000000014l-9.37299999999999,
           -9.373000000000047c-12.497000000000014,-12.496999999999957,-32.75800000000001,-12.496999999999957,
@@ -89,8 +89,6 @@ Orin Habich 10689508-->
           -45.254999999999995,0Z"
            style="fill:red; stroke:red; vector-effect:non-scaling-stroke;stroke-width:1px;"
            id="heart" transform="matrix(0.907394 0 0 0.907394 -2124.7 -525.608)"/>
-
-
           </svg>
 
 
@@ -99,27 +97,27 @@ Orin Habich 10689508-->
 
       <div class="row">
         <b><h3 id = "titlePiechartsSection"></h3></b>
-        <div class="col-md-3" >
+        <div class="col-md-4" >
         <input class = "checkbox" type="checkbox" id="checkbox1" >Per leeftijdsklasse<br>
         <input class = "checkbox" type="checkbox" id="checkbox2" >Naar soort vuurwerk<br>
         <input class = "checkbox" type="checkbox" id="checkbox3" >Zelf afgestoken of omstander<br>
         <input class = "checkbox" type="checkbox" id="checkbox4" >Legaal of illegaal vuurwerk<br>
         </div>
-        <div class="col-md-3"  >
+        <div class="col-md-2"  >
           <h4 id="titlePerAge"></h4>
           <svg id = "svgPerAge" width="200" height="200"></svg>
         </div>
         <div class="col-md-2" >
           <h4 id="titleTypeFireworks"></h4>
-            <svg id = "svgPerTypeFireworks" width="150" height="150"></svg>
+            <svg id = "svgPerTypeFireworks" width="200" height="200"></svg>
         </div>
         <div class="col-md-2" >
           <h4 id="titleBystander"></h4>
-          <svg id = "svgPerBystander" width="150" height="150"></svg>
+          <svg id = "svgPerBystander" width="200" height="200"></svg>
         </div>
         <div class="col-md-2" >
           <h4 id="titleStatusFireworks"></h4>
-          <svg id = "svgPerStatusFireworks" width="150" height="150"></svg>
+          <svg id = "svgPerStatusFireworks" width="200" height="200"></svg>
         </div>
       </div>
 
