onderverdeling materiele schade

--- a/vuurwerkschade/index.html
+++ b/vuurwerkschade/index.html
@@ -51,7 +51,7 @@ Orin Habich 10689508-->
         </div>
         <div class="col-md-6" id="figureHuman">
           <b><h3 id = "titleInjuriesSection"></h3></b>
-          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="350px" height="500px" viewBox="-2341.46 -1201.05 817.904 1429.22" preserveAspectRatio="xMidYMid meet"  >
+          <svg id="svgFigureHuman" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="350px" height="500px" viewBox="-2341.46 -1201.05 817.904 1429.22" preserveAspectRatio="xMidYMid meet"  >
           <rect id="svgEditorBackground" x="0" y="0" width="1620" height="840" style="fill:none; stroke: none;"/>
           <defs id="svgEditorDefs">
           <polygon id="svgEditorShapeDefs" style="fill:khaki;stroke:black;vector-effect:non-scaling-stroke;stroke-width:1px;"/>
@@ -78,8 +78,8 @@ Orin Habich 10689508-->
           </g>
 
           <g id="eye">
-            <circle class="figureHuman" cx="236" cy="136" r="22" transform="matrix(1 0 0 1 -2172 -1172)"/>
-            <circle class="figureHuman" cx="294" cy="137" r="22" transform="matrix(1 0 0 1 -2172 -1172)"/>
+            <circle class="figureHuman" cx="236" cy="136" r="22" fill="grey" transform="matrix(1 0 0 1 -2172 -1172)"/>
+            <circle class="figureHuman" cx="294" cy="137" r="22" fill="grey" transform="matrix(1 0 0 1 -2172 -1172)"/>
           </g>
           <path d="M270.7243885221396,-280.38419723097496l-9.37299999999999,9.372000000000014l-9.37299999999999,
           -9.373000000000047c-12.497000000000014,-12.496999999999957,-32.75800000000001,-12.496999999999957,
