--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@ Orin Habich 10689508-->
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="vuurwerkschade/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/fireworks.css">
-    <script src="vuurwerkschade/data/jqueryAjax.js"></script>
-    <script src="vuurwerkschade/data/bootstrap.js"></script>
-    <script src="vuurwerkschade/data/d3version4.js"></script>
-    <script src="vuurwerkschade/data/tip.js"></script>
-    <script src="vuurwerkschade/data/queueVersion1.js"></script>
-    <script src="vuurwerkschade/javascript/fireworks.js"></script>
+    <script src="data/jqueryAjax.js"></script>
+    <script src="data/bootstrap.js"></script>
+    <script src="data/d3version4.js"></script>
+    <script src="data/tip.js"></script>
+    <script src="data/queueVersion1.js"></script>
+    <script src="fireworks.js"></script>
   </head>
   <body>
     <div class="row">
