nog meer aanpassingen nodig

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Orin Habich 10689508-->
         </div>
         <div class="col-md-6" id="figureHuman">
           <b><h3 id = "titleInjuriesSection"></h3></b>
-          <object id="objectFigureHuman" onload="checkReady()" data="images/figureHuman.svg" type="image/svg+xml" ></object>
+          <object id="objectFigureHuman" onload="checkReady()" data="vuurwerkschade/images/figureHuman.svg" type="image/svg+xml" ></object>
         </div>
       </div>
 
@@ -109,7 +109,7 @@ Orin Habich 10689508-->
 
         <div class="col-md-6" >
           <div class="img-holder">
-            <img src="images/backgroundFireworks.png" alt="image description"/>
+            <img src="vuurwerkschade/images/backgroundFireworks.png" alt="image description"/>
 
             <div id="textWindow1" class="tooltipInfo"><b>Veel vervuilende stoffen</b>
               <span class="content">
