--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@ Orin Habich 10689508-->
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="vuurwerkschade/images/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="vuurwerkschade/css/bootstrap.css">
-    <link rel="stylesheet" href="vuurwerkschade/css/fireworks.css">
-    <script src="vuurwerkschade/data/jqueryAjax.js"></script>
-    <script src="vuurwerkschade/data/bootstrap.js"></script>
-    <script src="vuurwerkschade/data/d3version4.js"></script>
-    <script src="vuurwerkschade/data/tip.js"></script>
-    <script src="vuurwerkschade/data/queueVersion1.js"></script>
-    <script src="vuurwerkschade/javascript/fireworks.js"></script>
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="code/css/bootstrap.css">
+    <link rel="stylesheet" href="code/css/fireworks.css">
+    <script src="code/javascript/libraries/jqueryAjax.js"></script>
+    <script src="code/javascript/libraries/bootstrap.js"></script>
+    <script src="code/javascript/libraries/d3version4.js"></script>
+    <script src="code/javascript/libraries/tip.js"></script>
+    <script src="code/javascript/libraries//queueVersion1.js"></script>
+    <script src="code/javascript/fireworks.js"></script>
   </head>
   <body>
     <div class="row">
@@ -49,19 +49,64 @@ Orin Habich 10689508-->
           <h3>Vuurwerkslachtoffers naar de spoedeisende hulp</h3>
           <svg id = "svgFirstAid" width="600" height="400"></svg>
         </div>
-        <div class="col-md-6" id="figureHuman">
+        <div class="col-md-6">
           <b><h3 id = "titleInjuriesSection"></h3></b>
-          <object id="objectFigureHuman" onload="checkReady()" data="vuurwerkschade/images/figureHuman.svg" type="image/svg+xml" ></object>
+          <object id="objectFigureHuman" onload="checkReady()" data="images/figureHuman.svg" type="image/svg+xml" width=350 height=500></object>
+          <!-- <svg id="svgFigureHuman" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="350px" height="500px" viewBox="-2341.46 -1201.05 817.904 1429.22" preserveAspectRatio="xMidYMid meet"  >
+
+          <g id="head">
+            <circle class="figureHuman" cx="286" cy="149" r="118.891" transform="matrix(1 0 0 1 -2172 -1172)"/>
+          </g>
+          <g id="body">
+            <ellipse class="figureHuman" cx="288" cy="532" rx="122.34" ry="271.548" transform="matrix(1 0 0 1 -2172 -1172)"/>
+          </g>
+          <g id="leg">
+            <ellipse class="figureHuman" cx="212" cy="888" rx="40" ry="156" transform="matrix(1.1134 0.0933779 -0.0933779 1.1134 -2112.16 -1291.14)"/>
+            <ellipse class="figureHuman" cx="640.18" cy="870.175" rx="40" ry="156" transform="matrix(1.10984 -0.128966 0.128966 1.10984 -2665.36 -1163.7)"/>
+            <ellipse class="figureHuman" cx="241.104" cy="929.778" rx="40" ry="156" transform="matrix(1.11692 -0.0294497 0.0294497 1.11692 -2264.54 -1030.28)"/>
+            <ellipse class="figureHuman" cx="367.939" cy="936.255" rx="40" ry="156" transform="matrix(1.11692 -0.0294497 0.0294497 1.11692 -2264.54 -1030.28)"/>
+            <ellipse class="figureHuman" cx="158" cy="1320" rx="80" ry="40" transform="matrix(1 0 0 1 -2172 -1172)"/>
+            <ellipse class="figureHuman" cx="406" cy="1324" rx="80" ry="40" transform="matrix(1 0 0 1 -2172 -1172)"/>
+          </g>
+          <g id="arm">
+            <ellipse class="figureHuman" cx="426" cy="320" rx="132" ry="40" transform="matrix(0.936021 0.351944 -0.351944 0.936021 -2024.12 -1289.45)"/>
+            <ellipse class="figureHuman" cx="-76.982" cy="461.6" rx="132" ry="40" transform="matrix(0.531939 -0.846783 0.846783 0.531939 -2340.56 -1095.21)"/>
+            <ellipse class="figureHuman" cx="-121.778" cy="109.829" rx="132" ry="40" transform="matrix(-0.941915 -0.335851 0.335851 -0.941915 -2295.93 -667.118)"/>
+            <ellipse class="figureHuman" cx="-1095.66" cy="426.642" rx="132" ry="40" transform="matrix(0.346316 -0.938118 0.938118 0.346316 -1693.38 -1868.39)"/>
+          </g>
+          <g id="hand">
+            <ellipse class="figureHuman" cx="-94" cy="376" rx="42" ry="34" transform="matrix(1 0 0 1 -2172 -1172)"/>
+            <ellipse class="figureHuman" cx="448" cy="596" rx="42" ry="34" transform="matrix(1 0 0 1 -2172 -1172)"/>
+          </g>
+          <g id="eye">
+            <circle class="figureHuman" cx="236" cy="136" r="22" transform="matrix(1 0 0 1 -2172 -1172)"/>
+            <circle class="figureHuman" cx="294" cy="137" r="22" transform="matrix(1 0 0 1 -2172 -1172)"/>
+          </g>
+          <g id="heart">
+            <path class="figureHuman" d="M270.7243885221396,-280.38419723097496l-9.37299999999999,9.372000000000014l-9.37299999999999,
+            -9.373000000000047c-12.497000000000014,-12.496999999999957,-32.75800000000001,-12.496999999999957,
+            -45.254999999999995,0s-12.497000000000014,32.75800000000004,0,45.255000000000024l54.62700000000001,
+            54.62700000000001l54.627999999999986,-54.62700000000001c12.497000000000014,-12.496999999999986,
+            12.497000000000014,-32.75799999999995,0,-45.255000000000024s-32.75799999999998,-12.496999999999957,
+            -45.254999999999995,0Z"
+             style="vector-effect:non-scaling-stroke;stroke-width:1px;"
+             transform="matrix(0.907394 0 0 0.907394 -2124.7 -525.608)"/>
+          </g>
+          </svg> -->
         </div>
       </div>
 
       <div class="row">
         <b><h3 id = "titlePiechartsSection"></h3></b>
         <div class="col-md-4" >
-        <input class = "checkbox" type="checkbox" id="checkbox1" value = "Age">Per leeftijdsklasse<br>
-        <input class = "checkbox" type="checkbox" id="checkbox2" value="TypeFireworks">Naar soort vuurwerk<br>
-        <input class = "checkbox" type="checkbox" id="checkbox3" value="Bystander">Zelf afgestoken of omstander<br>
-        <input class = "checkbox" type="checkbox" id="checkbox4" value="StatusFireworks">Legaal of illegaal vuurwerk<br>
+        <input class = "checkbox" type="checkbox" value = "Age">
+          Per leeftijdsklasse<br>
+        <input class = "checkbox" type="checkbox" value="TypeFireworks">
+          Naar soort vuurwerk<br>
+        <input class = "checkbox" type="checkbox" value="Bystander">
+          Zelf afgestoken of omstander<br>
+        <input class = "checkbox" type="checkbox" value="StatusFireworks">
+          Legaal of illegaal vuurwerk<br>
         </div>
         <div class="col-md-2"  >
           <h4 id="titleAge"></h4>
@@ -109,7 +154,7 @@ Orin Habich 10689508-->
 
         <div class="col-md-6" >
           <div class="img-holder">
-            <img src="vuurwerkschade/images/backgroundFireworks.png" alt="image description"/>
+            <img src="images/backgroundFireworks.png" alt="image description"/>
 
             <div id="textWindow1" class="tooltipInfo"><b>Veel vervuilende stoffen</b>
               <span class="content">
