--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Orin Habich 10689508-->
 
       <div class="row">
         <div class="col-sm-6" >
-          <h2><b>Mens</b></h2>
+          <h2 class="subheader"><b>Mens</b></h2>
           <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#sourceSEH">Bronnen</button>
           <div id="sourceSEH" class="collapse">
             <p>
@@ -136,7 +136,7 @@ Orin Habich 10689508-->
 
       <div class="row">
         <div class="col-md-6" >
-          <h2><b>Milieu</b></h2>
+          <h2 class="subheader"><b>Milieu</b></h2>
           <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#sourcesFijnstof">Bronnen</button>
           <div id="sourcesFijnstof" class="collapse">
             <p>
@@ -212,7 +212,7 @@ Orin Habich 10689508-->
 
       <div class="row">
         <div class="col-md-6" >
-          <h2><b>Materiaal</b></h2>
+          <h2 class="subheader"><b>Materiaal</b></h2>
           <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#sourcesMateriaal">Bronnen</button>
           <div id="sourcesMateriaal" class="collapse">
             <p>
