alle issues voor vandaag gefixt :)

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@ Orin Habich 10689508-->
         </div>
         <div class="col-md-6">
           <b><h3 id = "titleInjuriesSection"></h3></b>
-          <object id="objectFigureHuman" onload="checkReady()" data="images/figureHuman.svg" type="image/svg+xml" width=350 height=500></object>
+          <g id="placeForFigureHuman"></g>
+
+          <!-- <object id="objectFigureHuman" onload="checkReady()" data="images/figureHuman.svg" type="image/svg+xml" width=350 height=500></object> -->
           <!-- <svg id="svgFigureHuman" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="350px" height="500px" viewBox="-2341.46 -1201.05 817.904 1429.22" preserveAspectRatio="xMidYMid meet"  >
 
           <g id="head">
