dropdown veranderd mee

--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@ Orin Habich 10689508-->
     <div class="row">
       <div class="col-md-12" >
         <h1><b>Schade door vuurwerk</b></h1>
-        <h4 id = "chooseYear"><b>Kies een jaarwisseling </b></h4>
+        <h4 id = "chooseYear"><b>Kies een jaarwisseling </b>
+          <select class="select">
+            <option id="y2014-2015" class="option" value=2014-2015>2014-2015</option>
+            <option id="y2015-2016" class="option" value=2015-2016>2015-2016</option>
+            <option id="y2016-2017" class="option" value=2016-2017>2016-2017</option>
+            <option id="y2017-2018" class="option" value=2017-2018>2017-2018</option>
+          </select>
+
+        </h4>
       </div>
     </div>
     <h5>By Orin Habich 10689508</h5>
