--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@ Orin Habich 10689508-->
     <script src="code/javascript/libraries/d3version4.js"></script>
     <script src="code/javascript/libraries/tip.js"></script>
     <script src="code/javascript/libraries//queueVersion1.js"></script>
+    <script src="code/javascript/helpers.js"></script>
+    <script src="code/javascript/piecharts.js"></script>
     <script src="code/javascript/fireworks.js"></script>
+
+
   </head>
-  <body>
+  <body >
     <div class="row">
       <div class="col-md-12" >
         <h1><b>Schade door vuurwerk</b></h1>
         <h4 id = "chooseYear"><b>Kies een jaarwisseling </b>
           <select class="select">
-            <option id="y2014-2015" class="option" value=2014-2015>2014-2015</option>
-            <option id="y2015-2016" class="option" value=2015-2016>2015-2016</option>
-            <option id="y2016-2017" class="option" value=2016-2017>2016-2017</option>
-            <option id="y2017-2018" class="option" value=2017-2018>2017-2018</option>
+
           </select>
 
         </h4>
@@ -55,7 +56,7 @@ Orin Habich 10689508-->
             </p>
           </div>
           <h3>Vuurwerkslachtoffers naar de spoedeisende hulp</h3>
-          <svg id = "svgFirstAid" width="600" height="400"></svg>
+          <svg id = "svgFirstAid" width="700" height="400"></svg>
         </div>
         <div class="col-md-6" id="placeForFigureHuman">
           <b><h3 id = "titleInjuriesSection"></h3></b>
@@ -66,30 +67,38 @@ Orin Habich 10689508-->
       <div class="row">
         <b><h3 id = "titlePiechartsSection"></h3></b>
         <div class="col-md-4" >
-        <input class = "checkbox" type="checkbox" value = "Age">
-          Per leeftijdsklasse<br>
-        <input class = "checkbox" type="checkbox" value="TypeFireworks">
-          Naar soort vuurwerk<br>
-        <input class = "checkbox" type="checkbox" value="Bystander">
-          Zelf afgestoken of omstander<br>
-        <input class = "checkbox" type="checkbox" value="StatusFireworks">
-          Legaal of illegaal vuurwerk<br>
+        <input class = "checkbox" type="checkbox" value = "Age" style="float: left; margin-top: 8px;">
+          <label for="myinput" class="indented-checkbox-text">
+            Per leeftijdsklasse<br>
+          </label>
+        <input class = "checkbox" type="checkbox" value="TypeFireworks" style="float: left; margin-top: 8px;">
+          <label for="myinput" class="indented-checkbox-text">
+              Naar soort vuurwerk<br>
+          </label>
+        <input class = "checkbox" type="checkbox" value="Bystander" style="float: left; margin-top: 8px;">
+          <label for="myinput" class="indented-checkbox-text">
+            Zelf afgestoken of omstander<br>
+          </label>
+        <input class = "checkbox" type="checkbox" value="StatusFireworks" style="float: left; margin-top: 8px;">
+          <label for="myinput" class="indented-checkbox-text">
+            Legaal of illegaal vuurwerk<br>
+          </label>
         </div>
         <div class="col-md-2"  >
           <h4 id="titleAge"></h4>
-          <svg id = "svgPerAge" width="230" height="230"></svg>
+          <svg id = "svgPerAge" width="240" height="240"></svg>
         </div>
         <div class="col-md-2" >
           <h4 id="titleTypeFireworks"></h4>
-            <svg id = "svgPerTypeFireworks" width="230" height="230"></svg>
+            <svg id = "svgPerTypeFireworks" width="240" height="240"></svg>
         </div>
         <div class="col-md-2" >
           <h4 id="titleBystander"></h4>
-          <svg id = "svgPerBystander" width="230" height="230"></svg>
+          <svg id = "svgPerBystander" width="240" height="240"></svg>
         </div>
         <div class="col-md-2" >
           <h4 id="titleStatusFireworks"></h4>
-          <svg id = "svgPerStatusFireworks" width="230" height="230"></svg>
+          <svg id = "svgPerStatusFireworks" width="240" height="240"></svg>
         </div>
       </div>
 
@@ -97,7 +106,7 @@ Orin Habich 10689508-->
         <div class="col-md-6" >
           <h3>Meldingen bij <a href="https://vuurwerkoverlast.nl/">
            Meldpunt vuurwerkoverlast</a></h3>
-          <svg id = "svgComplaints" width="600" height="300"></svg>
+          <svg id = "svgComplaints" width="700" height="400"></svg>
         </div>
       </div>
 
@@ -119,7 +128,7 @@ Orin Habich 10689508-->
           <svg id = "svgLinechart" width="800" height="400"></svg>
         </div>
 
-        <div class="col-md-6" >
+        <div class="col-md-6" id="infographic">
           <div class="img-holder">
             <img src="images/backgroundFireworks.png" alt="image description"/>
 
@@ -192,7 +201,7 @@ Orin Habich 10689508-->
             </p>
           </div>
           <h3>Materi&euml;le schade bij particulieren</h3>
-          <svg id = "svgDamage" width="600" height="300"></svg>
+          <svg id = "svgDamage" width="700" height="400"></svg>
         </div>
       </div>
     </div>
