--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Orin Habich 10689508-->
     <script src="code/javascript/libraries/tip.js"></script>
     <script src="code/javascript/libraries//queueVersion1.js"></script>
     <script src="code/javascript/helpers.js"></script>
-    <script src="code/javascript/piecharts.js"></script>
+    ?<script src="code/javascript/piecharts.js"></script>
     <script src="code/javascript/fireworks.js"></script>
 
 
